# data_science_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  api_key_rotator.py  docker-compose.yml  gemini.py  main.py  pyproject.toml  task_engine.py
uploads/bc62cd63-4809-4c5a-8fe0-ec411114eeee/: execution_result.txt  llm_response.txt  metadata.txt  result.json
uploads/e9669fcb-b76f-431d-a92b-4bd9a19dafbd/: execution_result.txt  llm_response.txt  metadata.txt  result.json
uploads/f49162df-c73e-4098-9f3a-01080653c3ac/: execution_result.txt  llm_response.txt  metadata.txt
