[project]
name = "data-science-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "pyngrok>=7.3.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
