[project]
name = "data-science-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "lxml>=6.0.0",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyngrok>=7.3.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
